# code-tester

./: Cargo.toml  License  README.md  README_ZH.md
.github/workflows/: rust.yml
src/: main.rs
src/test/: checker.rs  file.rs  mod.rs  runner.rs
src/test/text/: input_format
