[package]
name = "code-tester"
version = "0.1.0-base.2"
authors = ["Simon Gong <s@6bug.org>"]
license = "MIT"
readme = "README.md"
description = "A tool to test if the algorithm is right."
homepage = "https://github.com/weiwei-cool/code-tester"
repository = "https://github.com/weiwei-cool/code-tester"
keywords = ["cli", "algorithm"]
categories = ["command-line-utilities"]
edition = "2024"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
clap_derive = "4.5.18"
colored = "2.0"
zip = "2.2.0"
